--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,19 @@ android {
         }
         vectorDrawables.useSupportLibrary = true
     }
+    signingConfigs {
+        release {
+            storeFile file("$releaseKeystoreLocation")
+            keyAlias "$releaseKeyAlias"
+            storePassword "$releaseStorePassword"
+            keyPassword "$releaseKeyPassword"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
